tests/NormalTests/paczka1/fuzzy1/90399607.err
Error in line 26: TbkY3E S68 36,2
Error in line 30: zRZ2YA3jhSV A466 -3,8
Error in line 22: zRZ2YA3jhSV A466 74,5
